<resources>
    <string name="app_name">Just Java</string>

    <!-- custom strings -->
    <string name="Name">Name</string>
    <string name="Quantity">Quantity</string>
    <string name="Summary">Price</string>
    <string name="check_price">Check Price</string>
    <string name="Order">Order</string>
    <string name="Toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
</resources>
