<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.justjava.MainActivity">

    <EditText
        style="@style/textField"
        android:layout_width="match_parent"
        android:hint="@string/Name"
        android:textColor="@android:color/black" />

    <TextView
        style="@style/headingStyle"
        android:text="@string/Toppings" />

    <CheckBox
        style="@style/checkBox"
        android:text="@string/whipped_cream" />

    <CheckBox
        style="@style/checkBox"
        android:text="@string/chocolate" />

    <TextView
        style="@style/headingStyle"
        android:text="@string/Quantity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/buttonStyle"
            android:layout_width="48dp"
            android:text="+" />

        <TextView
            android:id="@+id/quantity_text_view"
            style="@style/text"
            android:text="2" />

        <Button
            style="@style/buttonStyle"
            android:layout_width="48dp"
            android:text="-" />
    </LinearLayout>

    <TextView
        style="@style/headingStyle"
        android:text="@string/Price" />

    <TextView
        android:id="@+id/price_text_view"
        style="@style/text"
        android:text="$ 10" />

    <Button
        style="@style/buttonStyle"
        android:layout_width="wrap_content"
        android:text="@string/Order" />
</LinearLayout>
